syntax = "proto3";

package follow.v1;
option go_package = "follow/v1;follow1";

service FollowService {
  rpc Follow(FollowRequest) returns (FollowResponse);
  rpc CancelFollow(CancelFollowRequest) returns (CancelFollowResponse);
  // 获得某个人的关注列表
  rpc GetFollowee(GetFolloweeRequest) returns (GetFolloweeResponse);
  // 获得某个人关注另外一个人的详细信息
  rpc FollowInfo(FollowInfoRequest) returns (FollowInfoResponse);
  rpc GetFollowStatics(GetFollowStaticsRequest) returns (GetFollowStaticsResponse);
}

message GetFollowStaticsRequest {
  int64 uid = 1;
}

message GetFollowStaticsResponse {
  int64 follower_cnt = 1;
  int64 following_cnt = 2;
}

message FollowRelation {
  int64 id = 1;
  int64 follower = 2;
  int64 followee = 3;
}

message FollowRequest {
  // 被关注者
  int64 followee = 1;
  // 关注者
  int64 follower = 2;
}

message FollowResponse {
}

message CancelFollowRequest {
  // 被关注者
  int64 followee = 1;
  // 关注者
  int64 follower = 2;
}

message CancelFollowResponse {
}

message GetFolloweeRequest {
  // 关注者，也就是某人查看自己的关注列表
  int64 follower = 1;
  // 最为普通的分页接口设计
  int64 offset = 2;
  int64 limit =3;
}

message GetFolloweeResponse {
  repeated FollowRelation follow_relation = 1;
}

message FollowInfoRequest {
  int64 follower = 1;
  int64 followee = 2;
}

message FollowInfoResponse {
  FollowRelation follow_relation = 1;
}